--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
-@import 'reset';
-@import 'variables';
+@import "reset";
+@import "variables";
 
 .clearfix::after {
     content: "";
@@ -8,8 +8,17 @@
     clear: both;
 }
 
+%clearfix {
+    &::after {
+        content: "";
+        display: table;
+        width: 100%;
+        clear: both;
+    }
+}
+
 body {
-    font-family: 'Nanum Gothic', sans-serif;
+    font-family: "Nanum Gothic", sans-serif;
     font-weight: 300;
 }
 
@@ -56,7 +65,7 @@ header {
                 margin-right: 41px;
                 font-size: 14px;
 
-                a { 
+                a {
                     color: #a7a7a7;
                     text-decoration: none;
                     text-transform: uppercase;
@@ -73,21 +82,21 @@ header {
 .title {
     padding-top: 66px;
     font-size: 33px;
-    font-weight:lighter;
+    font-weight: lighter;
     text-align: center;
     text-transform: none;
     margin: 0;
 }
-#main  {
+#main {
     background: #9a9a9a;
     padding-bottom: 162px;
     .logo {
         margin-top: 110px;
     }
-    h2{
+    h2 {
         color: $gray;
     }
-    
+
     .title1 {
         width: 50%;
         float: left;
@@ -95,26 +104,26 @@ header {
         h2 {
             color: white;
         }
-        
-        h2, p {
-            white-space: pre-line;    
+
+        h2,
+        p {
+            white-space: pre-line;
         }
         p {
             color: $gray;
         }
     }
-    
+
     .title2 {
         border-radius: 3px;
         overflow: hidden;
         float: right;
-        box-sizing: border-box; 
+        box-sizing: border-box;
         background-color: #ffffff;
         width: 360px;
         display: block;
         margin-top: 88px;
-        
-        
+
         h2 {
             background-color: #f5f5f5;
             padding: 18px;
@@ -127,7 +136,7 @@ header {
                 font-weight: 900;
             }
         }
-        
+
         form {
             text-align: center;
             input {
@@ -138,8 +147,8 @@ header {
                 outline: none;
                 border-bottom: 1px $gray solid;
                 box-shadow: none;
-            }     
-            button[type=submit] {
+            }
+            button[type="submit"] {
                 text-align: center;
                 background-color: #ff8b38;
                 margin-top: 50px;
@@ -158,8 +167,7 @@ header {
         border-bottom: 2px solid #ffffff;
         margin-top: 30px;
     }
-    
-}    
+}
 
 #social {
     position: relative;
@@ -188,6 +196,7 @@ header {
 }
 
 #tabs {
+    position: relative;
     background-color: #f5f5f5;
     max-height: 596px;
     height: 596px;
@@ -201,46 +210,305 @@ header {
             display: block;
             background-color: #333333;
             text-align: center;
-            padding: 50px 38px;
+            padding: 50px 36px;
             border: none;
             margin: 1px;
             cursor: pointer;
             text-transform: uppercase;
             color: white;
             font-weight: bold;
+            min-width: 110px;
+            min-height: 120px;
             &:hover {
                 background: #ff8b38;
             }
-            
         }
-        
-        }  
-     .text {
-       h2 {
-           font-weight: bold;
-           margin-bottom: 57px;
-           font-size: 30px;
-       }
-       p {
-           margin-top: 25px;
-           color: #a7a7a7;
-       }
-    
+    }
+    .text {
         padding-top: 140px;
-        width: 424px;
-        height: 245px;
-        margin-bottom: 207px;
         margin-left: 108px;
         margin-right: 208px;
-        width: 49%;  
-        float: left;  
-        line-height: 1.4em; 
+        width: 49%;
+        float: left;
+        line-height: 1.4em;
+
+        h2 {
+            font-weight: bold;
+            margin-bottom: 57px;
+            font-size: 30px;
+        }
+        p {
+            margin-top: 25px;
+            color: #a7a7a7;
+        }
+
+        .button {
+            float: left;
+            background-color: #ff8b38;
+            color: white;
+            padding: 13px 30px;
+            margin-bottom: 155px;
+            margin-top: 55px;
+        }
     }
-    .button {
-        background-color:#ff8b38;
-        color: white;
-        padding: 13px 30px;
+    img {
+        position: absolute;
+        left: 900px;
+        top: 196px;
+        right: 91px;
         bottom: 145px;
-        top: 405px;
+    }
+}
+
+#sublist {
+    background-color: white;
+    height: 594px;
+
+    .picture {
+        margin-left: 30px;
+        margin-top: 129px;
+        box-shadow: 3px 10px 25px 3px #a7a7a7;
+        width: 40%;
+    }
+
+    .sublistsection {
+        width: 450px;
+        height: 372px;
+        float: right;
+        margin-bottom: 135px;
+        line-height: 1.4em;
+        .title {
+            font-size: 20px;
+            color: #000000;
+            font-weight: bold;
+            text-align: left;
+        }
+        p {
+            margin-top: 20px;
+            color: #9a9a9a;
+            font-size: 14px;
+        }
+        .line {
+            width: 66px;
+            border-bottom: 2px solid #ff8b38;
+            margin-top: 29px;
+        }
+        .advantages_list {
+            width: 436px;
+
+            .item {
+                width: 436px;
+                margin-top: 50px;
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+
+                img {
+                    border-radius: 50%;
+                    float: left;
+                }
+                .content {
+                    width: 356px;
+                    float: left;
+                    margin-left: 25px;
+                    @extend %clearfix;
+                    span {
+                        padding-top: 20px;
+                        font-weight: bold;
+                        font-size: 16px;
+                        color: #000000;
+                        margin-top: 20px;
+                    }
+                    p {
+                        width: 363px;
+                        color: #9a9a9a;
+                        font-size: 14px;
+                        margin-top: 20px;
+                        margin-bottom: 20px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+#picture {
+    height: 523px;
+    background-color: #f5f5f5;
+    margin-top: 126px;
+    .line {
+        width: 66px;
+        border-bottom: 2px solid #ff8b38;
+        margin-top: 28px;
+        margin-bottom: 32px;
+    }
+    .section {
+        float: left;
+        max-height: 215px;
+        max-width: 470px;
+        padding-top: 105px;
+        margin-bottom: 190px;
+        span {
+            line-height: 1.4em;
+            font-weight: bold;
+            margin-bottom: 57px;
+            font-size: 30px;
+            margin-top: 105px;
+        }
+        p {
+            line-height: 1.4em;
+            color: #a7a7a7;
+            margin-top: 20px;
+        }
+    }
+    .section_photo {
+        width: 40%;
+        float: left;
+        img {
+            margin-top: 90px;
+            margin-left: 190px;
+            box-shadow: 3px 10px 25px 3px #a7a7a7;
+        }
+    }
+}
+
+#advantages {
+    height: 600px;
+    background-color: #ffffff;
+    text-align: center;
+    .title {
+        max-width: 460px;
+        margin-left: auto;
+        margin-right: auto;
+        h3 {
+            text-transform: uppercase;
+            color: #000000;
+            font-size: 36px;
+            text-align: center;
+        }
+        .line {
+            width: 66px;
+            border-bottom: 2px solid #ff8b38;
+            margin: 32px auto;
+        }
+        p {
+            font-size: 14px;
+            color: #a7a7a7;
+            text-align: center;
+        }
+    }
+    .advantages_list {
+        margin-top: 78px;
+        line-height: 1.5em;
+        .advantages_item:last-child {
+            float: right;
+        }
+        .advantages_item:nth-child(2) {
+            margin-left: 16px;
+            margin-right: 15px;
+        }
+        .advantages_item {
+            width: 356px;
+            float: left;
+            text-align: center;
+            h3 {
+                font-weight: bold;
+                color: #000000;
+                margin-top: 10px;
+                margin-bottom: 20px;
+            }
+            p {
+                font-size: 14px;
+                color: #a7a7a7;
+            }
+        }
+    }
+}
+
+#price {
+    height: 880px;
+    background-color: #f5f5f5;
+    text-align: center;
+    h3 {
+        text-transform: uppercase;
+        color: #000000;
+        font-size: 36px;
+        text-align: center;
+    }
+    .line {
+        width: 66px;
+        border-bottom: 2px solid #ff8b38;
+        margin: 32px auto;
+    }
+    p {
+        font-size: 14px;
+        color: #000000;
+        text-align: center;
+    }
+    .price_options {
+        margin-top: 78px;
+        width: 1114px;
+        .price_item {
+            max-height: 464px;
+            width: 340px;
+            float: left;
+
+            &:last-child {
+                float: right;
+            }
+            &:nth-child(2) {
+                margin-left: 46px;
+                margin-right: 15px;
+            }
+            .price_item_block {
+                height: 212px;
+                background-color: #000000;
+                color: #ffffff;
+                list-style-type: none;
+                font-weight: bold;
+                h3 {
+                    font-weight: bold;
+                    color: #ffffff;
+                    font-size: 20px;
+                    padding: 28px 155px;
+                    text-align: center;
+                }
+                p {
+                    color: #9a9a9a;
+                }
+                .price_line {
+                    border-bottom: 2px solid #a7a7a7;
+                    width: 100%;
+                    margin-bottom: 24px;
+                }
+                span {
+                    font-size: 94px;
+                    line-height: 50px;
+                    .currency {
+                        font-size: 35px;
+                    }
+                    price_item_block p {
+                        color: #9a9a9a;
+                    }
+                }
+                .flex-price_property {
+                    height: 250px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    ul {
+                        li {
+                            color: #9a9a9a;
+                            text-transform: uppercase;
+                            margin: 17px 130px;
+                            background-color: #f5f5f5;
+                            border-bottom: solid 1px #a7a7a7;
+                            font-size: 14px;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
